@@ -21,6 +21,9 @@ Changes in 3.0.4
 * FIX: Add missing include, fixes bug #512.
 * FIX: Change default FinderInfo for directories to be all 0, fixes
        bug 514.
+* NEW: New option "afp interfaces" which allows specifying where
+       Netatalk listens for AFP connections by interface names.
+       From FR #79.
 
 Changes in 3.0.3
 ================
